[gd_scene load_steps=4 format=2]

[ext_resource path="res://Browser/Browser.gd" type="Script" id=1]
[ext_resource path="res://GocoNet/GocoNet.gd" type="Script" id=2]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=3]

[node name="Browser" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
theme_override_constants/margin_right = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_left = 8
theme_override_constants/margin_bottom = 8
script = ExtResource( 1 )

[node name="GocoNet" type="HTTPRequest" parent="."]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 312.0
offset_bottom = 232.0

[node name="GameList" type="ItemList" parent="HBoxContainer"]
offset_right = 150.0
offset_bottom = 224.0
size_flags_horizontal = 3

[node name="GameInfo" type="VBoxContainer" parent="HBoxContainer"]
offset_left = 154.0
offset_right = 304.0
offset_bottom = 224.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="HBoxContainer/GameInfo"]
offset_right = 150.0
offset_bottom = 13.0
text = "The Game Title"
align = 1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/GameInfo"]
offset_top = 17.0
offset_right = 150.0
offset_bottom = 21.0

[node name="Version" type="HBoxContainer" parent="HBoxContainer/GameInfo"]
offset_top = 25.0
offset_right = 150.0
offset_bottom = 38.0

[node name="Label" type="Label" parent="HBoxContainer/GameInfo/Version"]
offset_right = 45.0
offset_bottom = 13.0
text = "Version: "

[node name="VersionValue" type="Label" parent="HBoxContainer/GameInfo/Version"]
offset_left = 49.0
offset_right = 55.0
offset_bottom = 13.0
text = "1"

[node name="Author" type="HBoxContainer" parent="HBoxContainer/GameInfo"]
offset_top = 42.0
offset_right = 150.0
offset_bottom = 55.0

[node name="Label" type="Label" parent="HBoxContainer/GameInfo/Author"]
offset_right = 41.0
offset_bottom = 13.0
text = "Author: "

[node name="AuthorValue" type="Label" parent="HBoxContainer/GameInfo/Author"]
offset_left = 45.0
offset_right = 111.0
offset_bottom = 13.0
text = "Author Value"
